add bad card layout

--- a/index.htm
+++ b/index.htm
@@ -7,6 +7,7 @@
 	<!-- Include Chota CSS from CDN -->
 	<link rel="stylesheet" href="https://unpkg.com/chota@latest">
 	<link rel="stylesheet" href="css/index.css">
+	<link rel="stylesheet" href="css/project.css">
 </head>
 <body>
 	<nav class="nav">
@@ -23,8 +24,8 @@
 
 	<div class="hero">
 		<div class="container">
-			<div class="responsive-stack" style="gap:0 5rem">
-				<img class="avatar" src="img/avatar.webp">
+			<div class="responsive-stack is-center" style="gap:0 5rem">
+				<img class="avatar " src="img/avatar.webp">
 				<div class="text-left">
 					<h1>Hi, I'm Aaron</h1>
 					<p style="max-width:600px;">I like to make generative art, minecraft mini-games and sometimes websites. Here and there I participate in game jams like LudumDare.<br>In my free time I enjoy playing frisbee, playing card and board and a few video games. I'll also pat any cat in patting range.</p>
@@ -41,10 +42,10 @@
 		</div>
 	</div>
 
-	<div class="container">
+	<div class="container" style="width:60%">
 		<h2 class="text-center text-capitalize">My latest greatest projects</h2>
 		<p>some text</p>
-		<div id="cards-container"></div>
+		<div id="projects-container"></div>
 	</div>
 
 	<div class="footer">
