add nicer project view

--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,6 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>GorgeousOne</title>
-	<!-- Include Chota CSS from CDN -->
 	<link rel="stylesheet" href="https://unpkg.com/chota@latest">
 	<link rel="stylesheet" href="css/index.css">
 	<link rel="stylesheet" href="css/project.css">
@@ -42,11 +41,14 @@
 		</div>
 	</div>
 
-	<div class="container" style="width:60%">
-		<h2 class="text-center text-capitalize">My latest greatest projects</h2>
-		<p>some text</p>
-		<div id="projects-container"></div>
-	</div>
+	<main class="container">
+		<h2 class="text-center text-capitalize">My latest projects</h2>
+		<div class="row" style="width:80%">
+			<div class="project-container col-5"></div>
+			<div class="col-1"></div> <!-- spacing -->
+			<div class="project-container col-5"></div>
+		</div>
+	</main>
 
 	<div class="footer">
 		<div class="container">
