test first project entries

--- a/index.htm
+++ b/index.htm
@@ -16,7 +16,6 @@
 		<div class="nav-right">
 			<a href="#">Home</a>
 			<a href="#">About</a>
-			<a href="#">Services</a>
 			<a href="#">Contact</a>
 		</div>
 	</nav>
@@ -43,10 +42,10 @@
 
 	<main class="container">
 		<h2 class="text-center text-capitalize">My latest projects</h2>
-		<div class="row" style="width:80%">
-			<div class="project-container col-5"></div>
-			<div class="col-1"></div> <!-- spacing -->
-			<div class="project-container col-5"></div>
+		<div class="row" style="justify-content:center;">
+			<div class="project-container"></div>
+			<div class="spacer-horz" style="width:10vw"></div> <!-- spacing -->
+			<div class="project-container"></div>
 		</div>
 	</main>
 
