--- a/index.htm
+++ b/index.htm
@@ -30,10 +30,10 @@
 				</div>
 			</div>
 			<div>
-				<span class="button icon-only clear" href="" title="GitHub"target="_blank">
+				<span class="button icon-only clear" href="https://github.com/GorgeousOne" title="GitHub"target="_blank">
 					<img src="https://icongr.am/simple/github.svg?size=32&color=000000" alt="GitHub">
 				</span>
-				<span class="button icon-only clear" href="" title="GitHub"target="_blank">
+				<span class="button icon-only clear" href="https://gorgeousone.itch.io/" title="GitHub"target="_blank">
 					<img src="https://icongr.am/simple/itchio.svg?size=32&color=000000" alt="GitHub">
 				</span>
 			</div>
