--- a/index.htm
+++ b/index.htm
@@ -30,12 +30,12 @@
 				</div>
 			</div>
 			<div>
-				<span class="button icon-only clear" href="https://github.com/GorgeousOne" title="GitHub"target="_blank">
+				<a class="button icon-only clear" href="https://github.com/GorgeousOne" title="GitHub" target="_blank">
 					<img src="https://icongr.am/simple/github.svg?size=32&color=000000" alt="GitHub">
-				</span>
-				<span class="button icon-only clear" href="https://gorgeousone.itch.io/" title="GitHub"target="_blank">
+				</a>
+				<a class="button icon-only clear" href="https://gorgeousone.itch.io/" title="GitHub"target="_blank">
 					<img src="https://icongr.am/simple/itchio.svg?size=32&color=000000" alt="GitHub">
-				</span>
+				</a>
 			</div>
 		</div>
 	</div>
